--- a/src/SampleApi/appsettings.json
+++ b/src/SampleApi/appsettings.json
@@ -11,7 +11,11 @@
         "ServiceName": "SampleApi"
     },
     "Zipkin": {
+        "ServiceName": "SampleApi",
         "Endpoint": "http://localhost:9411/api/v2/spans"
+    },
+    "AspNetCoreInstrumentation": {
+        "RecordException": "true"
     },
     "AllowedHosts": "*"
 }
