--- a/src/SampleWorker/appsettings.json
+++ b/src/SampleWorker/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "Zipkin": {
+        "ServiceName": "SampleApi",
+        "Endpoint": "http://localhost:9411/api/v2/spans"
+    },
+    "AspNetCoreInstrumentation": {
+        "RecordException": "true"
     }
-  }
 }
