--- a/src/SampleApi/appsettings.json
+++ b/src/SampleApi/appsettings.json
@@ -11,7 +11,7 @@
         "ServiceName": "SampleApi"
     },
     "Zipkin": {
-        "ServiceName": "SampleApi",
+        "ServiceName": "zipkin-test",
         "Endpoint": "http://localhost:9411/api/v2/spans"
     },
     "AspNetCoreInstrumentation": {
