--- a/src/SampleApi/appsettings.json
+++ b/src/SampleApi/appsettings.json
@@ -13,5 +13,8 @@
     "AspNetCoreInstrumentation": {
         "RecordException": "true"
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Default": "Server=sqlserver;Database=BlogDb;User Id=sa;Password=m1Password@12J;" 
+    }
 }
