--- a/src/SampleApi/SampleApi.csproj
+++ b/src/SampleApi/SampleApi.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="NewRelic.OpenTelemetry" Version="1.0.0" />
     <PackageReference Include="OpenTelemetry" Version="1.1.0-beta2" />
     <PackageReference Include="OpenTelemetry.Api" Version="1.1.0-beta2" />
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.1.0-beta1" />
     <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.0.1" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc4" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc4" />
@@ -28,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\SampleDatabase\SampleDatabase.csproj" />
+    <ProjectReference Include="..\SampleDatabase\SampleDatabase.csproj" />
   </ItemGroup>
 
 </Project>
