--- a/src/SampleWorker/SampleWorker.csproj
+++ b/src/SampleWorker/SampleWorker.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.1.0-beta2" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc4" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc4" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc4" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc4" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 </Project>
