Anche da HTTP da Connection refused

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - zipkin
       - db
       - sampleworker
+      - sampleapidue
 
   sampleapidue:
     image: ${DOCKER_REGISTRY-}sampleapidue
