--- a/src/SampleApi/appsettings.json
+++ b/src/SampleApi/appsettings.json
@@ -6,6 +6,11 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
+    "Jaeger": {
+        "ServiceName": "jaeger-test",
+        "AgentHost": "localhost",
+        "AgentPort": 6831
+    },
     "NewRelic": {
         "ApiKey": "NRAK-LJIAVTJ8KIG666PH5DXDCBRB2EG",
         "ServiceName": "SampleApi"
@@ -15,6 +20,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Default": "Server=sqlserver;Database=BlogDb;User Id=sa;Password=m1Password@12J;" 
+        "Default": "Server=sqlserver;Database=BlogDb;User Id=sa;Password=m1Password@12J;"
     }
 }
