--- a/src/SampleApi/SampleApi.csproj
+++ b/src/SampleApi/SampleApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -15,6 +15,9 @@
     <PackageReference Include="OpenTelemetry" Version="1.1.0-beta2" />
     <PackageReference Include="OpenTelemetry.Api" Version="1.1.0-beta2" />
     <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.1.0-beta1" />
+    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.1.0-beta1" />
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.1.0-beta1" />
+    <PackageReference Include="OpenTelemetry.Exporter.Prometheus" Version="1.0.0-rc1.1" />
     <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.0.1" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc4" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc4" />
