--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -18,3 +18,14 @@ services:
       - ASPNETCORE_URLS=http://+:80
     ports:
       - "80"
+
+  sampleapidue:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+    ports:
+      - "80"
+      - "443"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
