--- a/src/SampleApi/appsettings.json
+++ b/src/SampleApi/appsettings.json
@@ -15,6 +15,10 @@
         "ApiKey": "NRAK-LJIAVTJ8KIG666PH5DXDCBRB2EG",
         "ServiceName": "SampleApi"
     },
+    "Otlp": {
+        "ServiceName": "otlp-test",
+        "Endpoint": "http://otel-collector:4317"
+    },
     "AspNetCoreInstrumentation": {
         "RecordException": "true"
     },
