--- a/config/otel-agent-config.yaml
+++ b/config/otel-agent-config.yaml
@@ -11,7 +11,7 @@ receivers:
 
 exporters:
   otlp:
-    endpoint: "otel-collector:4317"
+    endpoint: otel-collector:4317
     insecure: true
   logging:
     loglevel: debug
@@ -20,11 +20,11 @@ processors:
   batch:
 
 extensions:
-  pprof:
-    endpoint: :1777
-  zpages:
-    endpoint: :55679
   health_check:
+  pprof:
+    endpoint: 0.0.0.0:1777
+  zpages:
+    endpoint: 0.0.0.0:55679
 
 service:
   extensions: [health_check, pprof, zpages]
