--- a/config/otel-collector-config.yaml
+++ b/config/otel-collector-config.yaml
@@ -4,15 +4,16 @@ receivers:
       grpc:
 
 exporters:
+  logging:
+    loglevel: debug
   prometheus:
     endpoint: "0.0.0.0:8889"
     namespace: prometheus
     const_labels:
       label1: value1
-  logging:
 
   zipkin:
-    endpoint: "http://zipkin:9412/api/v2/spans"
+    endpoint: "http://zipkin:9411/api/v2/spans"
     format: proto
 
   jaeger:
