--- a/src/SampleWorker/SampleWorker.csproj
+++ b/src/SampleWorker/SampleWorker.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc4" />
     <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc4" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+      <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.1.0-beta1" />
   </ItemGroup>
 </Project>
