--- a/config/otel-agent-config.yaml
+++ b/config/otel-agent-config.yaml
@@ -2,11 +2,6 @@ receivers:
   otlp:
     protocols:
       grpc:
-  opencensus:
-  jaeger:
-    protocols:
-      grpc:
-      thrift_http:
   zipkin:
 
 exporters:
@@ -30,10 +25,10 @@ service:
   extensions: [health_check, pprof, zpages]
   pipelines:
     traces:
-      receivers: [otlp, opencensus, jaeger, zipkin]
+      receivers: [otlp, zipkin]
       processors: [batch]
       exporters: [otlp, logging]
     metrics:
-      receivers: [otlp, opencensus]
+      receivers: [otlp]
       processors: [batch]
       exporters: [otlp, logging]
