--- a/config/otel-collector-config.yaml
+++ b/config/otel-collector-config.yaml
@@ -6,19 +6,10 @@ receivers:
 exporters:
   logging:
     loglevel: debug
-  prometheus:
-    endpoint: "0.0.0.0:8889"
-    namespace: prometheus
-    const_labels:
-      label1: value1
 
   zipkin:
     endpoint: "http://zipkin:9411/api/v2/spans"
     format: proto
-
-  jaeger:
-    endpoint: jaeger:14250
-    insecure: true
 
   newrelic:
     apikey: NRAK-LJIAVTJ8KIG666PH5DXDCBRB2EG
@@ -47,8 +38,8 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging, zipkin, jaeger]
+      exporters: [logging, zipkin]
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging, prometheus]
+      exporters: [logging]
