--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
   sampleapi:
     image: ${DOCKER_REGISTRY-}sampleapi
@@ -68,9 +66,9 @@ services:
     ports:        
         - "5672:5672"
         - "15672:15672"
-    volumes:
-        - rabbitmqdata/:/var/lib/rabbitmq/
-        - rabbitmqdata/:/var/log/rabbitmq/
+    #volumes:
+    #    #- rabbitmqdata/lib/:/var/lib/rabbitmq/
+    #    - rabbitmqdata/log/:/var/log/rabbitmq/
 
   db:
     image: "mcr.microsoft.com/mssql/server"
@@ -131,7 +129,7 @@ services:
     
   otel-agent:
     container_name: otel-agent
-    image: otel/opentelemetry-collector
+    image: otel/opentelemetry-collector-contrib
     command: ["--config=/etc/otel-agent-config.yaml", "${OTELCOL_ARGS}"]
     volumes:
       - ./../config/otel-agent-config.yaml:/etc/otel-agent-config.yaml
@@ -148,9 +146,51 @@ services:
     depends_on:
       - otel-collector
 
+  elasticsearch:
+    container_name: elasticsearch
+    image: docker.io/bitnami/elasticsearch:7
+    environment:
+      - xpack.security.enabled=false
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+    volumes:
+      - "elasticsearch_data:/bitnami/elasticsearch"
+    #command:
+    #  - /bin/bash
+    #  - -c
+    #  - |
+    #    sysctl -w vm.max_map_count=262144 &&
+    #    su elasticsearch -c /etc/sysctl.conf
+
+  apm-server.com:
+    container_name: apm-server
+    image: docker.elastic.co/apm/apm-server:7.13.0
+    ports:
+    - 8200:8200
+    command: /usr/share/apm-server/apm-server -e -c /usr/share/apm-server/apm-server.yml -E apm-server.host=apm-server:8200 --strict.perms=false
+    user: apm-server
+    volumes:
+    - ./../config/apm-server/apm-server.yml:/usr/share/apm-server/apm-server.yml
+    depends_on:
+    - elasticsearch
+    - kibana
+
+  kibana:
+    container_name: kibana
+    image: docker.io/bitnami/kibana:7
+    ports:
+      - "5601:5601"
+    volumes:
+      - "kibana_data:/bitnami/kibana"
+    depends_on:
+      - elasticsearch
 volumes:
   sqlserverdata:
     driver: local
   rabbitmqdata:
     driver: local
   prometheus:
+  elasticsearch_data:
+    driver: local
+  kibana_data:
+    driver: local
