--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -149,18 +149,9 @@ services:
   elasticsearch:
     container_name: elasticsearch
     image: docker.io/bitnami/elasticsearch:7
-    environment:
-      - xpack.security.enabled=false
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
     volumes:
       - "elasticsearch_data:/bitnami/elasticsearch"
-    #command:
-    #  - /bin/bash
-    #  - -c
-    #  - |
-    #    sysctl -w vm.max_map_count=262144 &&
-    #    su elasticsearch -c /etc/sysctl.conf
+    # sysctl -w vm.max_map_count=262144
 
   apm-server.com:
     container_name: apm-server
