--- a/config/otel-agent-config.yaml
+++ b/config/otel-agent-config.yaml
@@ -12,6 +12,27 @@ exporters:
   logging:
     loglevel: debug
 
+  zipkin:
+    endpoint: "http://zipkin:9411/api/v2/spans"
+    format: proto
+
+  newrelic:
+    apikey: NRAK-LJIAVTJ8KIG666PH5DXDCBRB2EG
+    timeout: 30s
+    traces:
+      host_override: trace-api.eu.newrelic.com
+      timeout: 20s
+    metrics:
+      host_override: metric-api.eu.newrelic.com
+    logs:
+      host_override: log-api.eu.newrelic.com
+
+  prometheus:
+    endpoint: "0.0.0.0:8889"
+    namespace: promexample
+    const_labels:
+      label1: value1
+
 processors:
   batch:
 
@@ -26,10 +47,10 @@ service:
   extensions: [health_check, pprof, zpages]
   pipelines:
     traces:
-      receivers: [otlp, zipkin]
+      receivers: [otlp]
       processors: [batch]
-      exporters: [otlp, logging]
+      exporters: [otlp, logging, zipkin, newrelic]
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [otlp, logging]
+      exporters: [otlp, logging, newrelic, prometheus]
