--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -26,24 +26,24 @@ services:
     ports:
       - 9411:9411
 
-  otel-collector:
-    container_name: otel-collector
-    image: otel/opentelemetry-collector
-    volumes:
-      - ./../config/otel-collector-config.yaml:/etc/otel-collector-config.yaml
-    ports:
-      - "1888:1888"   # pprof extension
-      - "8888:8888"   # Prometheus metrics exposed by the collector
-      - "8889:8889"   # Prometheus exporter metrics
-      - "13133:13133" # health_check extension
-      - "4317"        # OTLP gRPC receiver
-      - "55670:55679" # zpages extension
-    depends_on:
-      - zipkin
+  #otel-collector:
+  #  container_name: otel-collector
+  #  image: otel/opentelemetry-collector
+  #  volumes:
+  #    - ./../config/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+  #  ports:
+  #    - "1888:1888"   # pprof extension
+  #    - "8888:8888"   # Prometheus metrics exposed by the collector
+  #    - "8889:8889"   # Prometheus exporter metrics
+  #    - "13133:13133" # health_check extension
+  #    - "4317"        # OTLP gRPC receiver
+  #    - "55670:55679" # zpages extension
+  #  depends_on:
+  #    - zipkin
     
   otel-agent:
     container_name: otel-agent
-    image: otel/opentelemetry-collector
+    image: otel/opentelemetry-collector-contrib
     command: ["--config=/etc/otel-agent-config.yaml", "${OTELCOL_ARGS}"]
     volumes:
       - ./../config/otel-agent-config.yaml:/etc/otel-agent-config.yaml
@@ -58,7 +58,16 @@ services:
       - "55679:55679" # zpages extension
       - "13133"       # health_check
     depends_on:
-      - otel-collector
+      - zipkin
+      - prometheus
+
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:latest
+    volumes:
+      - ../config/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
 
 volumes:
   sqlserverdata:
