--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - zipkin
       - db
-      - otel-agent
+      - otel-gateway
 
   db:
     image: "mcr.microsoft.com/mssql/server"
@@ -26,34 +26,37 @@ services:
     ports:
       - 9411:9411
 
-  #otel-collector:
-  #  container_name: otel-collector
-  #  image: otel/opentelemetry-collector
-  #  volumes:
-  #    - ./../config/otel-collector-config.yaml:/etc/otel-collector-config.yaml
-  #  ports:
-  #    - "1888:1888"   # pprof extension
-  #    - "8888:8888"   # Prometheus metrics exposed by the collector
-  #    - "8889:8889"   # Prometheus exporter metrics
-  #    - "13133:13133" # health_check extension
-  #    - "4317"        # OTLP gRPC receiver
-  #    - "55670:55679" # zpages extension
-  #  depends_on:
-  #    - zipkin
-    
-  otel-agent:
-    container_name: otel-agent
+  otel-collector:
+    container_name: otel-collector
     image: otel/opentelemetry-collector-contrib
-    command: ["--config=/etc/otel-agent-config.yaml", "${OTELCOL_ARGS}"]
+    command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
-      - ./../config/otel-agent-config.yaml:/etc/otel-agent-config.yaml
+      - ./../config/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    ports:
+      - "1888:1888"   # pprof extension
+      - "8888:8888"   # Prometheus metrics exposed by the collector
+      - "8889:8889"   # Prometheus exporter metrics
+      - "13133:13133" # health_check extension
+      - "4317"        # OTLP gRPC receiver
+      - "55670:55679" # zpages extension
+    depends_on:
+      - zipkin
+    
+  otel-gateway:
+    container_name: otel-gateway
+    image: otel/opentelemetry-collector-contrib
+    #command: ["--config=/etc/otel-gateway-config.yaml", "${OTELCOL_ARGS}"]
+    command: ["--config=/etc/otel-gateway-config.yaml"]
+    volumes:
+      - ./../config/otel-gateway-config.yaml:/etc/otel-gateway-config.yaml
     ports:
       - "8887:8888"   # Prometheus metrics exposed by the agent
-      - "14250"       # Jaeger grpc receiver
-      - "14268"       # Jaeger http thrift receiver
-      - "55678"       # OpenCensus receiver
+      #- "14250"       # Jaeger grpc receiver
+      #- "14268"       # Jaeger http thrift receiver
+      #- "55678"       # OpenCensus receiver
       - "4317"        # OTLP gRPC receiver
-      - "9411"        # Zipkin receiver
+      - "4318"        # OTLP http receiver
+      #- "9411"        # Zipkin receiver
       - "1777:1777"   # pprof extension
       - "55679:55679" # zpages extension
       - "13133"       # health_check
@@ -68,6 +71,20 @@ services:
       - ../config/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
+
+  jaeger:
+    image: jaegertracing/all-in-one
+    container_name: jaeger
+    restart: on-failure
+    ports:
+      - 5775:5775/udp
+      - 5778:5778
+      - 6831:6831/udp
+      - 6832:6832/udp
+      #- 9411:9411
+      - 14268:14268
+      - 16686:16686
+      - 14250:14250
 
 volumes:
   sqlserverdata:
