--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - zipkin
       - db
-      - otel-gateway
+      - otel-collector
 
   db:
     image: "mcr.microsoft.com/mssql/server"
@@ -42,28 +42,6 @@ services:
     depends_on:
       - zipkin
     
-  otel-gateway:
-    container_name: otel-gateway
-    image: otel/opentelemetry-collector-contrib
-    #command: ["--config=/etc/otel-gateway-config.yaml", "${OTELCOL_ARGS}"]
-    command: ["--config=/etc/otel-gateway-config.yaml"]
-    volumes:
-      - ./../config/otel-gateway-config.yaml:/etc/otel-gateway-config.yaml
-    ports:
-      - "8887:8888"   # Prometheus metrics exposed by the agent
-      #- "14250"       # Jaeger grpc receiver
-      #- "14268"       # Jaeger http thrift receiver
-      #- "55678"       # OpenCensus receiver
-      - "4317"        # OTLP gRPC receiver
-      - "4318"        # OTLP http receiver
-      #- "9411"        # Zipkin receiver
-      - "1777:1777"   # pprof extension
-      - "55679:55679" # zpages extension
-      - "13133"       # health_check
-    depends_on:
-      - zipkin
-      - prometheus
-
   prometheus:
     container_name: prometheus
     image: prom/prometheus:latest
@@ -85,6 +63,12 @@ services:
       - 14268:14268
       - 16686:16686
       - 14250:14250
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+    - 3000:3000
 
 volumes:
   sqlserverdata:
